# stepup_bids_converter

./: .gitignore  README  README.md  pyproject.toml
data/bids/: dataset_description.json  participants.tsv
data/bids/sub-S1/: sub-S1_scans.tsv
data/bids/sub-S1/beh/: sub-S1_channels.tsv  sub-S1_emg.json  sub-S1_emg.vhdr  sub-S1_emg.vmrk
scripts/: data2bids_bologna.py  data2bids_kiel.py  data2bids_sydney.py  data2bids_telaviv.py  data2motionbids_kiel.py  data2motionbids_kiel_new.py  mocap2bids.py  pilot_converter_amsterdam.m  pilot_converter_kiel.m
src/: bids_convert.py  bids_kiel.py  bids_telaviv.py  clustering.py  clustering_new.py  clustering_tracked.py  clustering_vicon.py  data_eeg.py  data_emg.py  data_mocap.py  motionbids.py  plotting.py
utils/: clustering.py  config.py  data_emg.py  data_ha.py  data_mocap.py  emgbids.py  plotting.py  xdf.py
utils/montages/: stepup_kiel.bvef
utils_matlab/: prep_omc_bids.m
