[project]
name = "stepup-bids-converter-jw"
version = "0.1.0"
description = "This repo holds scripts to convert data to BIDS"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Julius Welzel", email = "julius.welzel@gmail.com" },
]
dependencies = [
    "defusedxml>=0.7.1,<0.8",
    "ipykernel>=6.29.5,<7",
    "mne>=1.6.1,<2",
    "mne-bids>=0.16.0,<0.17",
    "mnelab>=0.9.0,<0.10",
    "motionbids",
    "pandas>=2.2.2,<3",
    "pip>=25.3",
    "pybids>=0.16.4,<0.17",
    "pybv>=0.7.6,<0.8",
    "pylsl>=1.16.2,<2",
    "pyxdf>=1.16.6,<2",
    "tslearn>=0.6.4,<0.7",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
